--- a/src/main/resources/templates/application.properties
+++ b/src/main/resources/templates/application.properties
@@ -1,1 +1,4 @@
 spring.datasource.url: ${JDBC_DATABASE_URL:}
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
