--- a/src/main/resources/templates/application.properties
+++ b/src/main/resources/templates/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url: ${JDBC_DATABASE_URL:}
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
