--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,16 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
-       
+        <pluginRepository>
+            <id>tmc</id>
+            <name>TMC repo</name>
+            <url>http://maven.testmycode.net/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
     </pluginRepositories>
 </project>
