--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,9 @@
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
+		    <artifactId>lombok</artifactId>
+		    <version>1.18.8</version>
+		    <scope>provided</scope>
         </dependency>
         
         <dependency>
